<resources>
    <string name="app_name">carunlock</string>
    <string name="study">Study</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="estudio">Estudio</string>
    <string name="tests">Test</string>
    <string name="temario">Temario</string>
    <string name="registro_de_fallos">Registro de fallos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefs_file">com.project.carunlock.PREFERENCE_FILE_KEY</string>
    <string name="a">a)</string>
    <string name="example_text_test_question">Circulando por una vía frecuentada por peatones, especialmente niños o ancianos, ¿qué haremos?</string>
    <string name="b">b)</string>
    <string name="example_test_text_answera">Reducir la velocidad, incluso llegando a detenerme.</string>
    <string name="example_test_text_answerb">Reducir la velocidad, incluso llegando a detenerme.</string>
    <string name="c">c)</string>
    <string name="example_test_text_answerc">Reducir la velocidad, sin necesidad de detenerme</string>
    <string name="pregunta_1_de_30">Pregunta 1 de 30</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="resultado">Resultado</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>