<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragments.FailedQuestionsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_border_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/page_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Preguntas falladas"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="7dp"
            android:src="@drawable/ic_launcher"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/test_counter"
        app:layout_constraintBottom_toTopOf="@id/next_question">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/test_image_border"
                android:layout_width="200dp"
                android:layout_height="175dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/border_test_default_image"
                android:layout_marginTop="30dp"
                />

            <ImageView
                android:id="@+id/test_image"
                android:layout_width="190dp"
                android:layout_height="165dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/no_image"
                android:scaleType="fitXY"
                android:layout_marginTop="35dp"
                />

            <TextView
                android:id="@+id/test_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/test_image_border"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"

                android:textSize="20sp"
                android:gravity="center"
                android:maxWidth="325dp"
                android:textStyle="bold"
                android:textColor="#10739E"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/test_answer1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/test_question"
                android:layout_marginTop="30dp"
                android:paddingHorizontal="30dp">

                <TextView
                    android:id="@+id/testa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/a"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/test_answer1_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/testa"
                    android:layout_marginStart="5dp"
                    android:text="..."
                    app:layout_constraintWidth_percent="0.85"
                    android:textColor="@color/black"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/test_answer2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="30dp"
                android:minHeight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/test_answer1">

                <TextView
                    android:id="@+id/testb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/test_answer2_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="..."
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/testb"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.85" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/test_answer3"
                android:layout_width="0dp"
                android:paddingHorizontal="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/test_answer2"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:id="@+id/testc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/c"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/test_answer3_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/testc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:text="..."
                    app:layout_constraintWidth_percent="0.85"
                    android:textColor="@color/black"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <TextView
        android:id="@+id/test_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/pregunta_1_de_30"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        />


    <ImageButton
        android:id="@+id/previous_question"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_right_arrow"
        android:rotation="180"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        />

    <ImageButton
        android:id="@+id/next_question"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_right_arrow"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        />

    <ImageButton
        android:id="@+id/goBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/test_counter"
        app:layout_constraintTop_toTopOf="@id/test_counter"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#10739E"
        android:background="@drawable/go_back_button"
        android:layout_marginStart="25dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>